# solarex

./: .gitignore  ARCHITECTURE.md  DISCLAIMER.md  README.md
.github/workflows/: pull-request.yml
rust/: Cargo.toml
rust/auction/cli/: Cargo.toml
rust/auction/cli/src/: main.rs
rust/auction/program/: Cargo.toml  README.md
rust/auction/program/src/: processor.rs
rust/solarex/program/: Cargo.toml  README.md
rust/solarex/program/src/: deprecated_state.rs  entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs  utils.rs
rust/solarex/program/src/processor/: claim_bid.rs  decommission_auction_manager.rs  deprecated_init_auction_manager_v1.rs  deprecated_populate_participation_printing_account.rs  deprecated_validate_participation.rs  deprecated_validate_safety_deposit_box_v1.rs  empty_payment_account.rs  init_auction_manager_v2.rs  redeem_bid.rs  redeem_full_rights_transfer_bid.rs  redeem_participation_bid.rs  redeem_printing_v2_bid.rs  set_store.rs  start_auction.rs  validate_safety_deposit_box_v2.rs  withdraw_master_edition.rs
rust/solarex/test/: Cargo.toml
rust/solarex/test/src/: show.rs
rust/token-metadata/program/: Cargo.toml  README.md
rust/token-metadata/program/src/: instruction.rs
rust/token-metadata/test/: Cargo.toml
rust/token-vault/program/: Cargo.toml  README.md
rust/token-vault/program/src/: state.rs
rust/token-vault/test/: Cargo.toml
