[package]
name = "spl-token-metadata-test-client"
version = "0.1.0"
description = "Solarex Library Metadata Integration Test Client"
authors = ["Solarex Maintainers <maintainers@solarex.com>"]
repository = "https://github.com/solarex-foundation/solarex"
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
solana-client = "1.7.6"
solana-program = "1.7.6"
solana-sdk = "1.7.6"
bincode = "1.3.2"
borsh = "0.9.1"
arrayref = "0.3.6"
serde_json = "1.0"
solana-account-decoder = "1.7.10"
clap = "2.33.3"
solana-clap-utils = "1.6"
solana-cli-config = "1.6"
spl-token-metadata = { path = "../program", features = [ "no-entrypoint" ] }
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
